# LogGuard

./: .gitignore  README.md  REQUIREMENTS.md  a.py  docker-compose.yml  init-db.sql  log_gradue.drawio  main.py  pyproject.toml  start-pipeline.sh  stop-pipeline.sh
data/: test_logs.csv  training_logs.parquet
docs/: design.md  features.md  problem_faced.md  todo.md
docs/decisions/: 001_ADR_embeddings_or_keywords.md  002_do_we_need_aggregation_servie.md  003_result_database_choice.md
log_guard/: __init__.py  stream_processor.py
log_guard/config/: config.py
log_guard/pipeline/: __init__.py  feature_extractor.py  predictor.py
log_guard/storage/: results_writer.py
log_guard/utils/: check_run_pipeline.py  log_producer.py  logger.py  results_writer.py
notebooks/: 00_synthetic_data_generation.ipynb  01_basic_eda.ipynb  04_text_embeddings.ipynb  05_anomaly_detection_models.ipynb  model_summary.md  synthetic_data_generation.ipynb
tests/: TESTING.md  test_latency.py  test_summary.ipynb
